<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A9999"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mailBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/camera"
            android:focusable="true"
            app:backgroundTint="#6A6A6A"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/search"
            android:focusable="true"
            app:backgroundTint="#6A6A6A"
            app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/mail"
            android:focusable="true"
            app:backgroundTint="#6A6A6A"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="175dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Menu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="401dp"
        android:layout_height="604dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>